Fix date colour in dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,10 @@ select:hover {
     color: #e1e1e1;
   }
 
+  #date-box {
+    color: #fff;
+  }
+
   select:hover {
     color: #ffffff;
   }
